using UnityEngine;

namespace Common.Audio
{
    /// <summary>
    /// BGMを自動設定するスクリプタブルオブジェクト
    /// </summary>
    [CreateAssetMenu(fileName = "BGM", menuName = "SO/Audio/Music/BGM")]
    public class BGMScriptableObject: MusicScriptableObjectBase<BGMType>
    {
        
    }
}