using UnityEngine;

namespace Common.Audio
{
    /// <summary>
    /// SEを自動設定するスクリプタブルオブジェクト
    /// </summary>
    [CreateAssetMenu(fileName = "SE", menuName = "SO/Audio/Music/SE")]
    public class SEScriptableObject: MusicScriptableObjectBase<SEType>
    {
        
    }
}